fix(ui): prevent form inputs from covering form steps

--- a/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
@@ -636,7 +636,7 @@ form.form .helpTooltip {
     padding-top: 25px;
     position: sticky;
     top: 90px;
-    z-index: 2;
+    z-index: 999;
 }
 
 ul.steps {
